--- a/libcu/libcu.vcxproj
+++ b/libcu/libcu.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="sentinel-host.cpp" />
     <CudaCompile Include="stdiocu.cu" />
     <CudaCompile Include="stdlibcu.cu" />
+    <CudaCompile Include="stringcu.cu" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{ABDDD338-DC1C-475E-9903-0FC99E18726E}</ProjectGuid>
