--- a/src/libcu/libcu.vcxproj.filters
+++ b/src/libcu/libcu.vcxproj.filters
@@ -37,9 +37,6 @@
     <ClInclude Include="..\include\bits\libcu_stdio.h">
       <Filter>includes\bits</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\featurescu.h">
-      <Filter>includes</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\sentinel-iomsg.h">
       <Filter>includes</Filter>
     </ClInclude>
@@ -70,9 +67,6 @@
     <ClInclude Include="..\include\bits\libcu_stat.h">
       <Filter>includes\bits</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\unistdcu.h">
-      <Filter>includes</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\limitscu.h">
       <Filter>includes</Filter>
     </ClInclude>
@@ -82,13 +76,42 @@
     <ClInclude Include="..\include\host_definescu.h">
       <Filter>includes</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\featurescu.h">
+      <Filter>includes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\unistdcu.h">
+      <Filter>includes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\_unistd.h">
+      <Filter>includes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\_dirent.h">
+      <Filter>includes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="libcu.cu" />
     <CudaCompile Include="program-device.cu" />
     <CudaCompile Include="program.cu" />
     <CudaCompile Include="sentinel-gpu.cu" />
-    <CudaCompile Include="host_functions.cpp" />
+    <CudaCompile Include="direntcu.cu" />
+    <CudaCompile Include="errnocu.cu" />
+    <CudaCompile Include="regexcu.cu" />
+    <CudaCompile Include="setjmpcu.cu" />
+    <CudaCompile Include="stdiocu.cu" />
+    <CudaCompile Include="stdlibcu.cu" />
+    <CudaCompile Include="stringcu.cu" />
+    <CudaCompile Include="timecu.cu" />
+    <CudaCompile Include="unistdcu.cu" />
+    <CudaCompile Include="sys\bitveccu.cu">
+      <Filter>sys</Filter>
+    </CudaCompile>
+    <CudaCompile Include="sys\hashcu.cu">
+      <Filter>sys</Filter>
+    </CudaCompile>
+    <CudaCompile Include="sys\statcu.cu">
+      <Filter>sys</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="includes">
@@ -112,6 +135,7 @@
     <ClCompile Include="sentinel.cpp" />
     <ClCompile Include="sentinel-msg.cpp" />
     <ClCompile Include="sentinel-host.cpp" />
+    <ClCompile Include="host_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Libcu.Native.nuspec" />
@@ -121,24 +145,6 @@
     </None>
     <None Include="_content\sample.libcu.ganging.cu">
       <Filter>_content</Filter>
-    </None>
-    <None Include="direntcu.cu" />
-    <None Include="errnocu.cu" />
-    <None Include="regexcu.cu" />
-    <None Include="setjmpcu.cu" />
-    <None Include="stdiocu.cu" />
-    <None Include="stdlibcu.cu" />
-    <None Include="stringcu.cu" />
-    <None Include="timecu.cu" />
-    <None Include="unistdcu.cu" />
-    <None Include="sys\hashcu.cu">
-      <Filter>sys</Filter>
-    </None>
-    <None Include="sys\bitveccu.cu">
-      <Filter>sys</Filter>
-    </None>
-    <None Include="sys\statcu.cu">
-      <Filter>sys</Filter>
     </None>
   </ItemGroup>
 </Project>
