--- a/src/libcu/libcu.vcxproj
+++ b/src/libcu/libcu.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="..\include\crtdefscu.h" />
     <ClInclude Include="..\include\ctypecu.h" />
     <ClInclude Include="..\include\cuda_runtimecu.h" />
+    <ClInclude Include="..\include\_dirent.h" />
     <ClInclude Include="..\include\direntcu.h" />
     <ClInclude Include="..\include\errnocu.h" />
     <ClInclude Include="..\include\featurescu.h" />
@@ -50,29 +51,30 @@
     <ClInclude Include="..\include\sys\bitveccu.h" />
     <ClInclude Include="..\include\sys\hashcu.h" />
     <ClInclude Include="..\include\sys\statcu.h" />
+    <ClInclude Include="..\include\_unistd.h" />
     <ClInclude Include="..\include\unistdcu.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sentinel-msg.cpp" />
     <ClCompile Include="sentinel.cpp" />
     <ClCompile Include="sentinel-host.cpp" />
-    <CudaCompile Include="host_functions.cpp" />
+    <ClCompile Include="host_functions.cpp" />
+    <CudaCompile Include="sys\bitveccu.cu" />
+    <CudaCompile Include="sys\hashcu.cu" />
+    <CudaCompile Include="sys\statcu.cu" />
     <CudaCompile Include="libcu.cu" />
-    <None Include="direntcu.cu" />
-    <None Include="errnocu.cu" />
+    <CudaCompile Include="direntcu.cu" />
+    <CudaCompile Include="errnocu.cu" />
     <CudaCompile Include="program-device.cu" />
     <CudaCompile Include="program.cu" />
-    <None Include="regexcu.cu" />
+    <CudaCompile Include="regexcu.cu" />
     <CudaCompile Include="sentinel-gpu.cu" />
-    <None Include="setjmpcu.cu" />
-    <None Include="stdiocu.cu" />
-    <None Include="stdlibcu.cu" />
-    <None Include="stringcu.cu" />
-    <None Include="sys\bitveccu.cu" />
-    <None Include="sys\hashcu.cu" />
-    <None Include="sys\statcu.cu" />
-    <None Include="timecu.cu" />
-    <None Include="unistdcu.cu" />
+    <CudaCompile Include="setjmpcu.cu" />
+    <CudaCompile Include="stdiocu.cu" />
+    <CudaCompile Include="stdlibcu.cu" />
+    <CudaCompile Include="stringcu.cu" />
+    <CudaCompile Include="timecu.cu" />
+    <CudaCompile Include="unistdcu.cu" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libcu.native.nuspec" />
